--- a/style.css
+++ b/style.css
@@ -43,4 +43,27 @@ body{
     background-color: #210b2c;
     color: white;
     border-radius: 1rem;
+    border: none
+}
+
+#new-btn{
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #210b2c;
+    color: white;
+    border-radius: 1rem;
+    border: none
+}
+
+#msg{
+    font-size: 2rem;
+    color: white;
+}
+
+.msg-container{
+    height:30vmin;
+}
+
+.hide{
+    display: none;
 }
